Fixed color contrast issues

--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #CA6F1E;
+  background-color: #e28c40;
   font-family: "times new roman", sans-serif;
 }
 .bigsection {
