--- a/css/legal.css
+++ b/css/legal.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #CA6F1E;
+  background-color: #e28c40;
   font-family: "times new roman", sans-serif;
 }
 .header {
@@ -23,10 +23,6 @@ p.header {
 
 .smallsection ul, .smallsection p{
   font-size: 18px;
-}
-
-ul li a {
-  color: #0B5345;
 }
 
 .expandable {
