--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
   body {
-  background-color: #CA6F1E;
+  background-color: #e28c40;
   font-family: "times new roman", sans-serif;
 }
 .bigsection {
@@ -12,10 +12,6 @@
 
 .smallsection ul, .smallsection p{
   font-size: 18px;
-}
-
-ul li a {
-  color: #0B5345;
 }
 
 .expandable {
